--- a/template-app/config/locales/en.yml
+++ b/template-app/config/locales/en.yml
@@ -163,6 +163,11 @@ en:
       favourite_search:
         please_uniq_filters: 'Please select uniq filters'
     bx_block_categories:
+      category:
+        category_type:
+          packaged_food: 'Packaged Foods'
+          raw_food: 'Raw Foods'
+          cooked_food: 'Cooked Foods'
       sub_category:
         please_select_categories: 'Please select categories or a parent.'
     bx_block_content_management:
@@ -254,23 +259,3 @@ en:
           attributes:
             product_id:
               taken: 'Already taken'
-        account_block/email_account:
-          attributes:
-            email:
-              blank: 'can not be blank'
-        account_block/email_otp:
-          attributes:
-            email:
-              blank: 'can not be blank'
-        account_block/social_account:
-          attributes:
-            email:
-              blank: 'can not be blank'
-            unique_auth_id:
-              blank: 'can not be blank'
-        bx_block_add_profile/relation:
-          attributes:
-            relation:
-            blank: 'can not be blank'
-
-              
