--- a/template-app/config/locales/en.yml
+++ b/template-app/config/locales/en.yml
@@ -150,6 +150,9 @@ en:
     bx_block_upload_media:
       upload_media_controller:
         successfully_updated: 'Successfully Updated'
+    bx_block_term_and_condition:
+      term_and_conditions_controller:
+        term_and_conditions_not_exist: "Term and conditions doesn't exist"
   models:
     account_block:
       account:
