--- a/template-app/config/locales/kn.yml
+++ b/template-app/config/locales/kn.yml
@@ -150,6 +150,10 @@ kn:
     bx_block_upload_media:
       upload_media_controller:
         successfully_updated: 'ಯಶಸ್ವಿಯಾಗಿ ನವೀಕರಿಸಲಾಗಿದೆ'
+    bx_block_term_and_condition:
+      term_and_conditions_controller:
+        term_and_conditions_not_exist: "
+ನಿಯಮ ಮತ್ತು ಷರತ್ತುಗಳು ಅಸ್ತಿತ್ವದಲ್ಲಿಲ್ಲ"
   models:
     account_block:
       account:
