[952002] implemented multi language

--- a/template-app/config/locales/hi.yml
+++ b/template-app/config/locales/hi.yml
@@ -247,6 +247,205 @@ hi:
         supported: 'समर्थित'
         unsupported_sms: 'असमर्थित एसएमएस प्रदाता:'
         you_must_specify_provider: 'आपको एक एसएमएस प्रदाता निर्दिष्ट करना होगा।'
+    bx_block_catalogue:
+      smart_filters_service:
+        category:
+          Packaged_Food: 'डिब्बा बंद भोजन'
+          Packaged_Drink: 'पैक किए गए ड्रिंक्स'
+          Packaged_Cheese_And_Oil: 'पैक पनीर और तेल'
+          Raw_Food: 'कच्चे खाद्य'
+          Cooked_Food: 'पका हुआ भोजन'
+        category_filter:
+          Jams__Honey_&_Spreads: "जाम, शहद और प्रसार"
+          Cooking_&_Baking_Supplies: 'खाना पकाने और बेकिंग का सामान'
+          Canned_&_Jarred_Food: 'जाम, शहद और प्रसार'
+          FRUIT_JUICES_&_DRINKS: 'फलों के रस और पेय'
+          Biscuit_&_Cookies: 'बिस्किट और कुकीज़'
+          Snacks_&_Sweets: 'स्नैक्स और मिठाई'
+          Cereal_&_Museli: 'अनाज और मुसेली'
+          Coffee__Tea_&_Beverages: "कॉफी, चाय और पेय पदार्थ"
+          Snack_Foods: 'स्नैक फूड'
+          Sweets__Chocolate_&_Gum: "मिठाई, चॉकलेट और गोंद"
+          Pasta_&_Noodles: "पास्ता और नूडल्स"
+          Dairy_based_beverages: "डेयरी आधारित पेय पदार्थ"
+          Jams_&_Spreads: 'जाम और स्प्रेड'
+          Dairy_based_Beverages: 'डेयरी आधारित पेय पदार्थ'
+          Dried_Fruits_Nuts__Seeds: " सूखे फल, मेवे और बीज"
+          Cereal_and_Muesli: 'अनाज और मूसली'
+          Nutrition_Bars: 'पोषण बार'
+          Health_Drinks: 'स्वास्थ्य पेय'
+          Malt_/_Cereal_based_Beverages: 'माल्ट/अनाज आधारित पेय पदार्थ'
+          Spreads_&_Jams: 'स्प्रेड और जाम'
+          Dairy__Eggs_and_Plant_Based_Alternatives: "डेयरी, अंडे और पौधों पर आधारित विकल्प"
+          Dairy_based_Products: 'डेयरी आधारित उत्पाद'
+          Ready_to_Eat: 'खाने के लिए तैयार'
+          Powdered_Drink_Mixes: 'पीसा हुआ पेय मिलाता है'
+          Plant_Based_Alternatives: 'पौधे आधारित विकल्प'
+          Other_Beverages: 'अन्य पेय पदार्थ'
+          Cheese: 'पनीर'
+          Cereals_&_Muesli: 'अनाज और मुसेली'
+          Cola_&_Soft_Drinks: 'कोला और शीतल पेय'
+          Fruit_Juices: 'फलों के रस'
+          Cereal_based_products: 'अनाज क प्रॉडक्ट्स'
+          Juices__Malt_Drinks_&_Other_Beverages: "जूस ,माल्ट ड्रिंक्स और अन्य ड्रिंक"
+          Packaged_Cheese_&_Oil: "पैक पनीर और तेल"
+          Pulses: 'दाल'
+          Green_Leafy_Vegetables: 'हरे पत्ते वाली सब्जियां'
+          Malt/cereal_based_bev's: 'माल्ट/अनाज आधारित बेव'
+        sub_category_filter:
+          Jams_&_Spreads: 'जाम और स्प्रेड'
+          Cooking: 'खाना बनाना'
+          Sauce: 'सॉस'
+          Sauces: 'सॉस'
+          Spices_&_Masalas: 'मसाले और मसाला'
+          Powdered_Mixes: 'पाउडर मिक्स'
+          Flavouring_Powders: 'स्वादिष्ट बनाने का मसाला पाउडर'
+          Baking_Chocolates_&_Cocoa: 'बेकिंग चॉकलेट और कोको'
+          Ready_to_Cook: 'पकाने के लिए तैयार'
+          Soups__Stews_&_Chillis: "सूप, स्ट्यू और मिर्च"
+          Meat__Poultry_&_Seafood: "मांस, कुक्कुट और समुद्री भोजन"
+          Juices: 'रस'
+          Biscuit: 'बिस्कुट'
+          BIscuit: 'बिस्कुट'
+          Cookies: 'कुकीज़'
+          Fruit_Snacks: 'फलों का बना हुआ स्वल्पाहार'
+          Puffed_Snacks: 'फूला हुआ नाश्ता'
+          Cooking: 'खाना बनाना'
+          Biscuits_and_Cookies: 'बिस्कुट और कुकीज़'
+          Biscuits_&_Cookies: 'बिस्कुट और कुकीज़'
+          Chocolate: 'चॉकलेट'
+          chips: 'चिप्स'
+          flakes: 'फ्लेक्स'
+          Flakes: 'फ्लेक्स'
+          Muesli: 'मूसली'
+          Museli: 'मूसली'
+          Oats: 'जई'
+          Granola_Cereals: 'ग्रेनोला अनाज'
+          Snack_Bars: 'स्नैक पट्टियां'
+          Porridges: 'दलिया'
+          Children's_Cereals: "बच्चों का अनाज"
+          Powdered_Drink_Mixes: 'पीसा हुआ पेय मिलाता है'
+          Cola_&_Soft_Drinks: 'कोला और शीतल पेय'
+          Coffee: 'कॉफ़ी'
+          Chips: 'चिप्स'
+          Trail_Mix: 'निशान मिश्रण'
+          yogurt: 'दही'
+          Ice_cream: 'आइसक्रीम'
+          Rice_cake: 'चावल का केक'
+          Rice_Cakes: 'चावल की रोटी'
+          flavored_yogurt: 'स्वादयुक्त दही'
+          Chips_&_Crackers: 'चिप्स और पटाखे'
+          curd: 'दही'
+          Cakes_&_Pastries: 'केक और पेस्ट्री'
+          Indian_Snacks: 'भारतीय स्नैक्स'
+          Popcorn: 'पॉपकॉर्न'
+          Dips: 'डुबकी'
+          Sweets: 'मिठाइयाँ'
+          _Sweets: 'मिठाइयाँ'
+          Gum: 'गोंद'
+          Milkshake_Mixes: 'मिल्कशेक मिक्स'
+          Pasta: 'पास्ता'
+          Noodles: 'नूडल्स'
+          milkshakes: 'मिल्क शेक'
+          Jams: 'जाम'
+          Spreads: 'स्प्रेड'
+          Mayonnaise: 'मेयोनेज़'
+          Dairy_Whitener: 'डेयरी व्हाइटनर'
+          Yogurt_Drinks: 'दही पेय'
+          Yoghurt_drinks: 'दही पेय'
+          Condensed_Milk: 'गाढ़ा दूध'
+          Nuts_&_Seeds: 'मेवे और बीज'
+          Dried_Fruits: 'सूखे फल'
+          Health_Drinks: 'स्वास्थ्य पेय'
+          HEALTH_DRINK: 'स्वास्थ्य पेय'
+          Malted_Drinks: 'माल्टेड पेय'
+          Honey: 'शहद'
+          Soy_Milk: 'सोय दूध'
+          Milk: 'दूध'
+          Ready_to_Eat: 'खाने के लिए तैयार'
+          Powdered_Drink_Mixes: 'पीसा हुआ पेय मिलाता है'
+          Plant_Based_Milk: 'पौधे आधारित दूध'
+          Soya: 'सोया'
+          Other_Beverages: 'अन्य पेय पदार्थ'
+          Cheese: 'पनीर'
+          Hot_Chocolate: 'गर्म चॉकलेट'
+          oil: 'तेल'
+          Oil: 'तेल'
+        food_preference:
+          Veg: 'शाकाहारी'
+          Non_Veg: 'मासाहारी'
+          Vegan: 'वीगन /vegan'
+          Organic: 'आर्गेनिक'
+          Gluten_Free: 'जीरो ग्लूटेन'
+          No_Artificial_Preservative_Or_Color: 'जीरो आर्टिफिशियल रंग जीरो प्रेसेर्वटिवेस'
+          No_Added_Sugar: 'जीरो चीनी /चीनी नहीं मिलायी हुई'
+          Jain: 'जैन'
+        food_allergies:
+          Dairy: 'डेयरी'
+          Egg: 'अंडा'
+          Fish: 'मछली'
+          Shellfish: 'शेलफिश'
+          Tree_Nuts: 'ट्रीटट्स'
+          Peanuts: 'मूंगफली'
+          Wheat: 'गेहूं'
+          Soyabean: 'सोयाबीन'
+        health_preference:
+          Immunity: 'इम्युनिटी'
+          Gut_Health: 'गट हेल्थ'
+          Holistic_Nutrition: 'होलिस्टिक नुट्रिशन'
+          Weight_loss: 'वजन घटाना'
+          Weight_gain: 'वजन बढ़ाना'
+          Diabetic: 'मधुमेह'
+          Low_Cholesterol: 'कम कोलेस्ट्रॉल '
+          Heart_Friendly: 'दिल के लिए अच्छा'
+          Energy_and_Vitality: 'ऊर्जा और जीवन शक्ति'
+          Physical_growth: 'शारीरिक विकास (बच्चे)'
+          Cognitive_health: 'ब्रेन हेल्थ छोटे बच्चों क लिए'
+          Mental_health_/_mood_boosting_foods: 'मानसिक स्वास्थ्य/मूड बूस्टिंग फूड्स'
+          Hyperthyroid: 'हाइपरथायरायडिज्म'
+          Hypothyroid: 'हाइपोथायरायडिज्म'
+          Greater_than_60_years_old: '60 साल से अधिक उम्र'
+          Pregnant_women: 'गर्भवती महिलाएं'
+          Low_Sugar: 'कम चीनी'
+          High_Protein: 'उच्च प्रोटीन'
+        functional_preference:
+          title:
+            Protein: 'प्रोटीन'
+            Fibre: 'फाइबर'
+            Probiotic: 'प्रोबायोटिक'
+          vitamins:
+            vit_a: 'विटाटिम A'
+            vit_c: 'विटाटिम C'
+            vit_d: 'विटाटिम D'
+            vit_b6: 'विटाटिम B6'
+            vit_b12: 'विटाटिम B12'
+            vit_b9: 'विटाटिम B9'
+            vit_b2: 'विटाटिम B2'
+            vit_b3: 'विटाटिम B3'
+            vit_b1: 'विटाटिम B1'
+            vit_b5: 'विटाटिम B5'
+            vit_b7: 'विटाटिम B7'
+          minarals:
+            calcium: 'कैल्शियम'
+            iron: 'लोहा'
+            magnesium: 'मैगनीशियम'
+            zinc: 'जस्ता'
+            iodine: 'आयोडीन'
+            potassium: 'पोटैशियम'
+            phosphorus: 'फास्फोरस'
+            manganese: 'मैंगनीज'
+            copper: 'ताँबा'
+            selenium: 'सेलेनियम'
+            chloride: 'क्लोराइड'
+            chromium: 'क्रोमियम'
+          prd_negative_not_good:
+            calories: 'कैलोरी'
+            Total_fat: 'कुल वसा'
+            saturated_fat: 'संतृप्त वसा'
+            cholesterol: 'कोलेस्ट्रॉल'
+            trans_fat: 'ट्रांस फैट'
+            sodium: 'सोडियम'
+            Sugar: 'चीनी'
   activerecord:
     errors:
       models:
