--- a/template-app/config/locales/kn.yml
+++ b/template-app/config/locales/kn.yml
@@ -248,6 +248,207 @@ kn:
         supported: 'ಬೆಂಬಲಿತವಾಗಿದೆ'
         unsupported_sms: 'ಬೆಂಬಲಿತವಲ್ಲದ SMS ಒದಗಿಸುವವರು:'
         you_must_specify_provider: 'ನೀವು SMS ಒದಗಿಸುವವರನ್ನು ನಿರ್ದಿಷ್ಟಪಡಿಸಬೇಕು.'
+    bx_block_catalogue:
+      smart_filters_service:
+        category:
+          Packaged_Food: 'ಪ್ಯಾಕೇಜ್ಡ್ ಆಹಾರ'
+          Packaged_Drink: 'ಪ್ಯಾಕೇಜ್ ಮಾಡಿದ ಪಾನೀಯಗಳು'
+          Packaged_Cheese_And_Oil: 'ಪ್ಯಾಕ್ ಮಾಡಿದ ಚೀಸ್ ಮತ್ತು ಎಣ್ಣೆ'
+          Raw_Food: 'ಹಸಿ ಆಹಾರ'
+          Cooked_Food: 'ಬೇಯಿಸಿದ ಆಹಾರ'
+        category_filter:
+          Jams__Honey_&_Spreads: "ಜಾಮ್‌ಗಳು, ಜೇನುತುಪ್ಪ ಮತ್ತು ಸ್ಪ್ರೆಡ್‌ಗಳು"
+          Cooking_&_Baking_Supplies: 'ಅಡುಗೆ ಮತ್ತು ಬೇಕಿಂಗ್ ಸರಬರಾಜು'
+          Canned_&_Jarred_Food: 'ಪೂರ್ವಸಿದ್ಧ ಮತ್ತು ಜಾರ್ಡ್ ಫುಡ್ '
+          FRUIT_JUICES_&_DRINKS: 'ಹಣ್ಣಿನ ರಸಗಳು ಮತ್ತು ಪಾನೀಯಗಳು'
+          Biscuit_&_Cookies: 'ಬಿಸ್ಕತ್ತು ಮತ್ತು ಕುಕೀಸ್'
+          Snacks_&_Sweets: 'ತಿಂಡಿಗಳು ಮತ್ತು ಸಿಹಿತಿಂಡಿಗಳು'
+          Cereal_&_Museli: 'ಧಾನ್ಯಗಳು ಮತ್ತು ಮ್ಯೂಸ್ಲಿ'
+          Coffee__Tea_&_Beverages: "ಕಾಫಿ, ಟೀ ಮತ್ತು ಪಾನೀಯಗಳು"
+          Snack_Foods: 'ಲಘು ಆಹಾರಗಳು'
+          Sweets__Chocolate_&_Gum: "ಸಿಹಿತಿಂಡಿಗಳು, ಚಾಕೊಲೇಟ್ ಮತ್ತು ಗಮ್"
+          Pasta_&_Noodles: "ಪಾಸ್ಟಾ ಮತ್ತು ನೂಡಲ್ಸ್"
+          Dairy_based_beverages: "ಡೈರಿ ಆಧಾರಿತ ಪಾನೀಯಗಳು"
+          Jams_&_Spreads: 'ಜಾಮ್‌ಗಳು ಮತ್ತು ಸ್ಪ್ರೆಡ್‌ಗಳು'
+          Dairy_based_Beverages: 'ಡೈರಿ ಆಧಾರಿತ ಪಾನೀಯಗಳು'
+          Dried_Fruits_Nuts__Seeds: "ಒಣಗಿದ ಹಣ್ಣುಗಳು, ನಟ್ಸ್ಗಳು ಮತ್ತು ಬೀಜಗಳು"
+          Cereal_and_Muesli: 'ಧಾನ್ಯ ಮತ್ತು ಮುಸೇಲಿ'
+          Nutrition_Bars: 'ನ್ಯೂಟ್ರಿಷನ್ ಬಾರ್ಗಳು'
+          Health_Drinks: 'ಆರೋಗ್ಯ ಪಾನೀಯಗಳು'
+          Malt_/_Cereal_based_Beverages: 'ಮಾಲ್ಟ್/ಧಾನ್ಯ ಆಧಾರಿತ ಪಾನೀಯಗಳು'
+          Spreads_&_Jams: '
+ಸ್ಪ್ರೆಡ್‌ಗಳು ಮತ್ತು ಜಾಮ್‌ಗಳು'
+          Dairy__Eggs_and_Plant_Based_Alternatives: "ಡೈರಿ, ಮೊಟ್ಟೆಗಳು ಮತ್ತು ಸಸ್ಯ ಆಧಾರಿತ ಪರ್ಯಾಯಗಳು"
+          Dairy_based_Products: 'ಡೈರಿ ಆಧಾರಿತ ಉತ್ಪನ್ನಗಳು'
+          Ready_to_Eat: 'ತಿನ್ನಲು ಸಿದ್ಧವಾಗಿದೆ'
+          Powdered_Drink_Mixes: 'ಪುಡಿ ಪಾನೀಯ ಮಿಶ್ರಣಗಳು'
+          Plant_Based_Alternatives: 'ಸಸ್ಯ ಆಧಾರಿತ ಪರ್ಯಾಯಗಳು'
+          Other_Beverages: 'ಇತರ ಪಾನೀಯಗಳು'
+          Cheese: 'ಗಿಣ್ಣು'
+          Cereals_&_Muesli: 'ಧಾನ್ಯ ಮತ್ತು ಮುಸೇಲಿ'
+          Cola_&_Soft_Drinks: 'ಕೋಲಾ ಮತ್ತು ತಂಪು ಪಾನೀಯಗಳು'
+          Fruit_Juices: 'ಹಣ್ಣಿನ ರಸಗಳು'
+          Cereal_based_products: 'ಸಿರಿಧಾನ್ಯ ಆಧಾರಿತ ಉತ್ಪನ್ನಗಳು'
+          Juices__Malt_Drinks_&_Other_Beverages: "ರಸಗಳು, ಮಾಲ್ಟ್ ಪಾನೀಯಗಳು ಮತ್ತು ಇತರ ಪಾನೀಯಗಳು"
+          Packaged_Cheese_&_Oil: "ಪ್ಯಾಕ್ ಮಾಡಿದ ಚೀಸ್ ಮತ್ತು ಎಣ್ಣೆ"
+          Pulses: 'ಕಾಳುಗಳು'
+          Green_Leafy_Vegetables: 'ಸೊಪ್ಪುಗಳು'
+          Malt/cereal_based_bev's: '
+ಮಾಲ್ಟ್/ಧಾನ್ಯ ಆಧಾರಿತ ಬೆವ್ಸ್'
+        sub_category_filter:
+          Jams_&_Spreads: 'ಜಾಮ್‌ಗಳು ಮತ್ತು ಸ್ಪ್ರೆಡ್‌ಗಳು'
+          Cooking: 'ಅಡುಗೆ'
+          Sauce: 'ಸಾಸ್ಗಳು'
+          Sauces: 'ಸಾಸ್ಗಳು'
+          Spices_&_Masalas: 'ಮಸಾಲೆಗಳು ಮತ್ತು ಮಸಾಲಾಗಳು'
+          Powdered_Mixes: 'ಪುಡಿಮಾಡಿದ ಮಿಶ್ರಣಗಳು'
+          Flavouring_Powders: 'ಸುವಾಸನೆಯ ಪುಡಿಗಳು'
+          Baking_Chocolates_&_Cocoa: 'ಬೇಕಿಂಗ್ ಚಾಕೊಲೇಟ್ ಮತ್ತು ಕೋಕೋ'
+          Ready_to_Cook: 'ಬೇಯಿಸಲು ಸಿದ್ಧವಾಗಿದೆ'
+          Soups__Stews_&_Chillis: "ಸೂಪ್‌ಗಳು, ಸ್ಟ್ಯೂಗಳು ಮತ್ತು ಚಿಲ್ಲಿಸ್"
+          Meat__Poultry_&_Seafood: "ಮಾಂಸ, ಕೋಳಿ ಮತ್ತು ಸಮುದ್ರಾಹಾರ"
+          Juices: 'ರಸಗಳು'
+          Biscuit: 'ಬಿಸ್ಕತ್ತು'
+          BIscuit: 'ಬಿಸ್ಕತ್ತು'
+          Cookies: 'ಕುಕೀಸ್'
+          Fruit_Snacks: 'ಹಣ್ಣು ತಿಂಡಿಗಳು'
+          Puffed_Snacks: 'ಪಫ್ಡ್ ಸ್ನ್ಯಾಕ್ಸ್'
+          Cooking: 'ಅಡುಗೆ'
+          Biscuits_and_Cookies: 'ಬಿಸ್ಕತ್ತುಗಳು ಮತ್ತು ಕುಕೀಸ್'
+          Biscuits_&_Cookies: 'ಬಿಸ್ಕತ್ತುಗಳು ಮತ್ತು ಕುಕೀಸ್'
+          Chocolate: 'ಚಾಕೊಲೇಟ್'
+          chips: 'ಚಿಪ್ಸ್'
+          flakes: 'ಫ್ಲೇಕ್ಸ್'
+          Flakes: 'ಫ್ಲೇಕ್ಸ್'
+          Muesli: 'ಮುಯೆಸ್ಲಿ '
+          Museli: 'ಮುಯೆಸ್ಲಿ '
+          Oats: 'ಓಟ್ಸ್'
+          Granola_Cereals: 'ಗ್ರಾನೋಲಾ ಧಾನ್ಯಗಳು'
+          Snack_Bars: 'ಸ್ನ್ಯಾಕ್ ಬಾರ್ಗಳು'
+          Porridges: 'ಗಂಜಿಗಳು'
+          Children's_Cereals: "ಮಕ್ಕಳ ಧಾನ್ಯಗಳು"
+          Powdered_Drink_Mixes: 'ಪುಡಿ ಪಾನೀಯ ಮಿಶ್ರಣಗಳು'
+          Cola_&_Soft_Drinks: 'ಕೋಲಾ ಮತ್ತು ತಂಪು ಪಾನೀಯಗಳು'
+          Coffee: 'ಕಾಫಿ'
+          Chips: 'ಚಿಪ್ಸ್'
+          Trail_Mix: 'ಟ್ರಯಲ್ ಮಿಕ್ಸ್'
+          yogurt: 'ಮೊಸರು'
+          Ice_cream: 'ಐಸ್ ಕ್ರೀಮ್'
+          Rice_cake: 'ಅಕ್ಕಿ ಕೇಕ್'
+          Rice_Cakes: 'ಅಕ್ಕಿ ಕೇಕ್ಗಳು'
+          flavored_yogurt: 'ಸುವಾಸನೆಯ ಮೊಸರು'
+          Chips_&_Crackers: 'ಚಿಪ್ಸ್ ಮತ್ತು ಕ್ರ್ಯಾಕರ್ಸ್'
+          curd: 'ಮೊಸರು'
+          Cakes_&_Pastries: 'ಕೇಕ್ ಮತ್ತು ಪೇಸ್ಟ್ರಿಗಳು'
+          Indian_Snacks: 'ಭಾರತೀಯ ತಿಂಡಿಗಳು'
+          Popcorn: 'ಪಾಪ್ ಕಾರ್ನ್'
+          Dips: 'ಡಿಪ್ಸ್'
+          Sweets: 'ಸಿಹಿತಿಂಡಿಗಳು'
+          _Sweets: 'ಸಿಹಿತಿಂಡಿಗಳು'
+          Gum: 'ಗಮ್'
+          Milkshake_Mixes: 'ಮಿಲ್ಕ್ ಶೇಕ್ ಮಿಶ್ರಣಗಳು'
+          Pasta: 'ಪಾಸ್ಟಾ'
+          Noodles: 'ನೂಡಲ್ಸ್'
+          milkshakes: 'ಮಿಲ್ಕ್ಶೇಕ್ಗಳು'
+          Jams: 'ಜಾಮ್‌ಗಳು'
+          Spreads: 'ಸ್ಪ್ರೆಡ್‌ಗಳು'
+          Mayonnaise: 'ಮೇಯನೇಸ್'
+          Dairy_Whitener: 'ಡೈರಿ ವೈಟ್ನರ್'
+          Yogurt_Drinks: 'ಮೊಸರು ಪಾನೀಯಗಳು'
+          Yoghurt_drinks: 'ಮೊಸರು ಪಾನೀಯಗಳು'
+          Condensed_Milk: 'ಮಂದಗೊಳಿಸಿದ ಹಾಲು'
+          Nuts_&_Seeds: 'ನಟ್ಸ್ಗಳು ಮತ್ತು ಬೀಜಗಳು'
+          Dried_Fruits: 'ಒಣಗಿದ ಹಣ್ಣುಗಳು'
+          Health_Drinks: 'ಆರೋಗ್ಯ ಪಾನೀಯಗಳು'
+          HEALTH_DRINK: 'ಆರೋಗ್ಯ ಪಾನೀಯಗಳು'
+          Malted_Drinks: 'ಮಾಲ್ಟೆಡ್ ಪಾನೀಯಗಳು'
+          Honey: 'ಜೇನು'
+          Soy_Milk: 'ಸೋಯಾ ಹಾಲು'
+          Milk: 'ಹಾಲು'
+          Ready_to_Eat: 'ತಿನ್ನಲು ಸಿದ್ಧವಾಗಿದೆ'
+          Powdered_Drink_Mixes: 'ಪುಡಿ ಪಾನೀಯ ಮಿಶ್ರಣಗಳು'
+          Plant_Based_Milk: 'ಸಸ್ಯ ಆಧಾರಿತ ಹಾಲು'
+          Soya: 'ಸೋಯಾ '
+          Other_Beverages: 'ಇತರ ಪಾನೀಯಗಳು'
+          Cheese: 'ಗಿಣ್ಣು'
+          Hot_Chocolate: 'ಬಿಸಿ ಚಾಕೊಲೇಟ್'
+          oil: 'ಎಣ್ಣೆ'
+          Oil: 'ಎಣ್ಣೆ'
+        food_preference:
+          Veg: 'ಸಸ್ಯಾಹಾರಿ'
+          Non_Veg: 'ಮಾಂಸಾಹಾರಿ'
+          Vegan: 'ವೆಗನ್'
+          Organic: 'ಆರ್ಗ್ಯಾನಿಕ್'
+          Gluten_Free: 'ಗ್ಲುಟನ್ ಮುಕ್ತ'
+          No_Artificial_Preservative_Or_Color: 'ಕೃತಕ ಬಣ್ಣಗಳಿಲ್ಲದ  ಸಂರಕ್ಷಕಗಳಿಲ್ಲದ'
+          No_Added_Sugar: 'ಸಕ್ಕರೆ ಸೇರಿಸಿದ'
+          Jain: 'ಜೈನ್'
+        food_allergies:
+          Dairy: 'ಡೈರಿ'
+          Egg: 'ಮೊಟ್ಟೆ'
+          Fish: 'ಮೀನು'
+          Shellfish: 'ಶೆಲ್ಫಿಶ್'
+          Tree_Nuts: 'ಟ್ರೀನಟ್ಸ್'
+          Peanuts: 'ಕಡಲೆಕಾಯಿ'
+          Wheat: 'ಗೋಧಿ'
+          Soyabean: 'ಸೋಯಾಬೀನ್'
+        health_preference:
+          Immunity: 'ರೋಗನಿರೋಧಕ ಶಕ್ತಿ (immunity)'
+          Gut_Health: 'ಗಟ್ ಹೆಲ್ತ್ (Gut health)'
+          Holistic_Nutrition: 'ಹೋಲಿಸ್ಟಿಕ್ ನ್ಯೂಟ್ರಿಷನ್'
+          Weight_loss: 'ತೂಕ ನಷ್ಟ'
+          Weight_gain: 'ತೂಕ ಹೆಚ್ಚಳ'
+          Diabetic: 'ಮಧುಮೇಹ'
+          Low_Cholesterol: 'ಕಡಿಮೆ ಕೊಲೆಸ್ಟ್ರಾಲ್'
+          Heart_Friendly: 'ಹೃದಯ ಸ್ನೇಹಿ'
+          Energy_and_Vitality: 'ಶಕ್ತಿ ಮತ್ತು ಚೈತನ್ಯ'
+          Physical_growth: 'ದೈಹಿಕ ಬೆಳವಣಿಗೆ (ಮಕ್ಕಳು)'
+          Cognitive_health: 'ಅರಿವಿನ ಆರೋಗ್ಯ (ಮಕ್ಕಳು)'
+          Mental_health_/_mood_boosting_foods: 'ಮಾನಸಿಕ ಆರೋಗ್ಯ/ಚಿತ್ತವನ್ನು ಹೆಚ್ಚಿಸುವ ಆಹಾರಗಳು '
+          Hyperthyroid: 'ಹೈಪರ್ ಥೈರಾಯ್ಡ್'
+          Hypothyroid: 'ಹೈಪೋಥೈರಾಯ್ಡ್'
+          Greater_than_60_years_old: '60 ವರ್ಷಕ್ಕಿಂತ ಮೇಲ್ಪಟ್ಟವರು'
+          Pregnant_women: 'ಗರ್ಭಿಣಿ ಮಹಿಳೆಯರು'
+          Low_Sugar: 'ಕಡಿಮೆ ಸಕ್ಕರೆ'
+          High_Protein: 'ಹೆಚ್ಚಿನ ಪ್ರೋಟೀನ್'
+        functional_preference:
+          title:
+            Protein: 'ಪ್ರೋಟೀನ್'
+            Fibre: 'ಫೈಬರ್'
+            Probiotic: 'ಪ್ರೋಬಯಾಟಿಕ್'
+          vitamins:
+            vit_a: 'ವಿಟಮಿನ್ A'
+            vit_c: 'ವಿಟಮಿನ್ C'
+            vit_d: 'ವಿಟಮಿನ್ D'
+            vit_b6: 'ವಿಟಮಿನ್ B6'
+            vit_b12: 'ವಿಟಮಿನ್ B12'
+            vit_b9: 'ವಿಟಮಿನ್ B9'
+            vit_b2: 'ವಿಟಮಿನ್ B2'
+            vit_b3: 'ವಿಟಮಿನ್ B3'
+            vit_b1: 'ವಿಟಮಿನ್ B1'
+            vit_b5: 'ವಿಟಮಿನ್ B5'
+            vit_b7: 'ವಿಟಮಿನ್ B7'
+          minarals:
+            calcium: 'ಕ್ಯಾಲ್ಸಿಯಂ'
+            iron: 'ಕಬ್ಬಿಣ'
+            magnesium: 'ಮೆಗ್ನೀಸಿಯಮ್'
+            zinc: 'ಸತು'
+            iodine: 'ಅಯೋಡಿನ್'
+            potassium: 'ಪೊಟ್ಯಾಸಿಯಮ್'
+            phosphorus: 'ರಂಜಕ'
+            manganese: 'ಮ್ಯಾಂಗನೀಸ್'
+            copper: 'ತಾಮ್ರ'
+            selenium: 'ಸೆಲೆನಿಯಮ್'
+            chloride: 'ಕ್ಲೋರೈಡ್'
+            chromium: 'ಕ್ರೋಮಿಯಂ'
+          prd_negative_not_good:
+            calories: 'ಕ್ಯಾಲೋರಿ'
+            Total_fat: 'ಒಟ್ಟು ಕೊಬ್ಬು'
+            saturated_fat: 'ಪರಿಷ್ಕರಿಸಿದ ಕೊಬ್ಬು'
+            cholesterol: 'ಕೊಲೆಸ್ಟ್ರಾಲ್'
+            trans_fat: 'ಟ್ರಾನ್ಸ್‌ಫ್ಯಾಟ್'
+            sodium: 'ಸೋಡಿಯಂ'
+            Sugar: 'ಸಕ್ಕರೆ'
   activerecord:
     errors:
       models:
