[952002] added multi language feature for product details

--- a/template-app/config/locales/en.yml
+++ b/template-app/config/locales/en.yml
@@ -161,6 +161,47 @@ en:
         is_your_otp_please: 'is your OTP. Please do not share it with anyone.'
         thank_you_super_foods: 'Thank you. SuperFoods valley Private Limited.'
     bx_block_catalogue:
+      products:
+        data:
+          level:
+            Medium: 'Medium'
+            High: 'High'
+            Low: 'Low'
+            Free: 'Free'
+          name:
+            protein: 'protein'
+            fibre: 'fibre'
+            vit_a: 'vit_a'
+            vit_c: 'vit_c'
+            vit_d: 'vit_d'
+            iron: 'iron'
+            calcium: 'calcium'
+            magnesium: 'magnesium'
+            potassium: 'potassium'
+            zinc: 'zinc'
+            iodine: 'iodine'
+            vit_b1: 'vit_b1'
+            vit_b2: 'vit_b2'
+            vit_b3: 'vit_b3'
+            vit_b6: 'vit_b6'
+            vit_b12: 'vit_b12'
+            vit_e: 'vit_e'
+            vit_b7: 'vit_b7'
+            vit_b9: 'vit_b9'
+            vit_b5: 'vit_b5'
+            phosphorus: 'phosphorus'
+            copper: 'copper'
+            manganese: 'manganese'
+            chromium: 'chromium'
+            selenium: 'selenium'
+            chloride: 'chloride'
+            saturated_fat: 'saturated_fat'
+            sugar: 'sugar'
+            sodium: 'sodium'
+            calories: 'calories'
+            cholesterol: 'cholesterol'
+            trans_fat: 'trans_fat'
+            total_fat: 'total_fat'
       compare_product:
         you_are_not_able: 'You are not able to add more product'
       favourite_search:
