--- a/template-app/config/locales/hi.yml
+++ b/template-app/config/locales/hi.yml
@@ -161,6 +161,47 @@ hi:
         is_your_otp_please: 'आपका ओटीपी है। कृपया इसे किसी के साथ साझा न करें।'
         thank_you_super_foods: 'शुक्रिया। सुपरफूड्स वैली प्राइवेट लिमिटेड।'
     bx_block_catalogue:
+      products:
+        data:
+          level:
+            Medium: 'मध्यम'
+            High: 'ज़्यादा'
+            Low: 'कम'
+            Free: 'मुक्त'
+          name:
+            protein: 'प्रोटीन'
+            fibre: 'फाइबर'
+            vit_a: 'विटाटिम A'
+            vit_c: 'विटाटिम C'
+            vit_d: 'विटाटिम D'
+            iron: 'लोहा'
+            calcium: 'कैल्शियम'
+            magnesium: 'मैगनीशियम'
+            potassium: 'पोटैशियम'
+            zinc: 'जस्ता'
+            iodine: 'आयोडीन'
+            vit_b1: 'विटाटिम B1'
+            vit_b2: 'विटाटिम B2'
+            vit_b3: 'विटाटिम B3'
+            vit_b6: 'विटाटिम B6'
+            vit_b12: 'विटाटिम B12'
+            vit_e: 'विटाटिम E'
+            vit_b7: 'विटाटिम B7'
+            vit_b9: 'विटाटिम B9'
+            vit_b5: 'विटाटिम B5'
+            phosphorus: 'फास्फोरस'
+            copper: 'ताँबा'
+            manganese: 'मैंगनीज'
+            chromium: 'क्रोमियम'
+            selenium: 'सेलेनियम'
+            chloride: 'क्लोराइड'
+            calories: 'कैलोरी'
+            total_fat: 'कुल वसा'
+            saturated_fat: 'संतृप्त वसा'
+            cholesterol: 'कोलेस्ट्रॉल'
+            trans_fat: 'ट्रांस फैट'
+            sodium: 'सोडियम'
+            sugar: 'चीनी'
       compare_product:
         you_are_not_able: 'आप अधिक उत्पाद जोड़ने में सक्षम नहीं हैं'
       favourite_search:
