--- a/template-app/config/locales/kn.yml
+++ b/template-app/config/locales/kn.yml
@@ -162,6 +162,47 @@ kn:
         is_your_otp_please: 'ನಿಮ್ಮ OTP ಆಗಿದೆ. ದಯವಿಟ್ಟು ಯಾರೊಂದಿಗೂ ಹಂಚಿಕೊಳ್ಳಬೇಡಿ.'
         thank_you_super_foods: 'ಧನ್ಯವಾದ. ಸೂಪರ್ಫುಡ್ಸ್ ವ್ಯಾಲಿ ಪ್ರೈವೆಟ್ ಲಿಮಿಟೆಡ್.'
     bx_block_catalogue:
+      products:
+        data:
+          level:
+            Medium: 'ಮಾಧ್ಯಮ'
+            High: 'ಹೆಚ್ಚಿನ'
+            Low: 'ಕಡಿಮೆ'
+            Free: 'ಉಚಿತ'
+          name:
+            protein: 'ಪ್ರೋಟೀನ್'
+            fibre: 'ಫೈಬರ್'
+            vit_a: 'ವಿಟಮಿನ್ A'
+            vit_c: 'ವಿಟಮಿನ್ C'
+            vit_d: 'ವಿಟಮಿನ್ D'
+            iron: 'ಕಬ್ಬಿಣ'
+            calcium: 'ಕ್ಯಾಲ್ಸಿಯಂ'
+            magnesium: 'ಮೆಗ್ನೀಸಿಯಮ್'
+            potassium: 'ಪೊಟ್ಯಾಸಿಯಮ್'
+            zinc: 'ಸತು'
+            iodine: 'ಅಯೋಡಿನ್'
+            vit_b1: 'ವಿಟಮಿನ್ B1'
+            vit_b2: 'ವಿಟಮಿನ್ B2'
+            vit_b3: 'ವಿಟಮಿನ್ B3'
+            vit_b6: 'ವಿಟಮಿನ್ B6'
+            vit_b12: 'ವಿಟಮಿನ್ B12'
+            vit_e: 'ವಿಟಮಿನ್ E'
+            vit_b7: 'ವಿಟಮಿನ್ B7'
+            vit_b9: 'ವಿಟಮಿನ್ B9'
+            vit_b5: 'ವಿಟಮಿನ್ B5'
+            phosphorus: 'ರಂಜಕ'
+            copper: 'ತಾಮ್ರ'
+            manganese: 'ಮ್ಯಾಂಗನೀಸ್'
+            chromium: 'ಕ್ರೋಮಿಯಂ'
+            selenium: 'ಸೆಲೆನಿಯಮ್'
+            chloride: 'ಕ್ಲೋರೈಡ್'
+            calories: 'ಕ್ಯಾಲೋರಿ'
+            total_fat: 'ಒಟ್ಟು ಕೊಬ್ಬು'
+            saturated_fat: 'ಪರಿಷ್ಕರಿಸಿದ ಕೊಬ್ಬು'
+            cholesterol: 'ಕೊಲೆಸ್ಟ್ರಾಲ್'
+            trans_fat: 'ಟ್ರಾನ್ಸ್‌ಫ್ಯಾಟ್'
+            sodium: 'ಸೋಡಿಯಂ'
+            sugar: 'ಸಕ್ಕರೆ'
       compare_product:
         you_are_not_able: 'ನೀವು ಹೆಚ್ಚಿನ ಉತ್ಪನ್ನವನ್ನು ಸೇರಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ'
       favourite_search:
