--- a/template-app/config/locales/hi.yml
+++ b/template-app/config/locales/hi.yml
@@ -333,6 +333,20 @@ hi:
           Pulses: 'दाल'
           Green_Leafy_Vegetables: 'हरे पत्ते वाली सब्जियां'
           Malt/cereal_based_bev's: 'माल्ट/अनाज आधारित बेव'
+          Dried_Fruits__Nuts_&Seeds: ' सूखे फल, मेवे और बीज'
+          Cereal&Muesli: 'अनाज और मूसली'
+          Malt/Cereal_based_Beverages: 'माल्ट/अनाज आधारित पेय पदार्थ'
+          Dairy__Eggs&Plant_Based_Alternatives: 'डेयरी अंडे और पौधे आधारित विकल्प'
+          Fruit_Juices&Drinks: 'फलों का रस और पेय'
+          Malt/cereal_based_bevs: 'माल्ट/अनाज आधारित पेय पदार्थ'
+          Dried_Fruits__Nuts_&_Seeds: ' सूखे फल, मेवे और बीज'
+          Cereal_&_Muesli: 'अनाज और मूसली'
+          Dairy__Eggs_&_Plant_Based_Alternatives: "डेयरी, अंडे और पौधों पर आधारित विकल्प"
+          Candies_&_Mints: 'कैंडी और टकसाल'
+          Snack_Bars: 'स्नैक पट्टियां'
+          Soups__Stews_&_Chillis: 'सूप स्टू और मिर्च'
+          Diet_&_Nutrition: 'आहार और पोषण'
+          Fruit_Juices_&_Drinks: 'फलों का रस और पेय'
         sub_category_filter:
           Jams_&_Spreads: 'जाम और स्प्रेड'
           Cooking: 'खाना बनाना'
@@ -412,6 +426,15 @@ hi:
           Hot_Chocolate: 'गर्म चॉकलेट'
           oil: 'तेल'
           Oil: 'तेल'
+          Flavouring_Syrups: 'स्वादिष्ट बनाने का मसाला सिरप'
+          cooking: 'खाना बनाना'
+          Milkshakes: 'मिल्क शेक'
+          Curd: 'दही'
+          Candies_&_Mints: 'कैंडी और टकसाल'
+          Chocolate_Bars: 'चॉकलेट के बार'
+          Diabetic_Care: 'मधुमेह की देखभाल'
+          Gut_Health: 'गट हेल्थ'
+          Protein_Supplements: 'प्रोटीन सप्लीमेंट्स'
         food_preference:
           Veg: 'शाकाहारी'
           Non_Veg: 'मासाहारी'
