--- a/template-app/config/locales/kn.yml
+++ b/template-app/config/locales/kn.yml
@@ -336,6 +336,14 @@ kn:
           Green_Leafy_Vegetables: 'ಸೊಪ್ಪುಗಳು'
           Malt/cereal_based_bev's: '
 ಮಾಲ್ಟ್/ಧಾನ್ಯ ಆಧಾರಿತ ಬೆವ್ಸ್'
+          Dried_Fruits__Nuts_&_Seeds: 'ಒಣಗಿದ ಹಣ್ಣುಗಳು, ನಟ್ಸ್ಗಳು ಮತ್ತು ಬೀಜಗಳು'
+          Cereal_&_Muesli: 'ಏಕದಳ ಮತ್ತು ಮ್ಯೂಸ್ಲಿ'
+          Dairy__Eggs_&_Plant_Based_Alternatives: "ಡೈರಿ, ಮೊಟ್ಟೆಗಳು ಮತ್ತು ಸಸ್ಯ ಆಧಾರಿತ ಪರ್ಯಾಯಗಳು"
+          Candies_&_Mints: 'ಮಿಠಾಯಿಗಳು ಮತ್ತು ಮಿಂಟ್ಸ್'
+          Snack_Bars: 'ಸ್ನ್ಯಾಕ್ ಬಾರ್ಗಳು'
+          Soups__Stews_&_Chillis: 'ಸೂಪ್ ಸ್ಟ್ಯೂಸ್ ಮತ್ತು ಚಿಲ್ಲಿಸ್'
+          Diet_&_Nutrition: 'ಆಹಾರ ಮತ್ತು ಪೋಷಣೆ'
+          Fruit_Juices_&_Drinks: 'ಹಣ್ಣಿನ ರಸಗಳು ಮತ್ತು ಪಾನೀಯಗಳು'
         sub_category_filter:
           Jams_&_Spreads: 'ಜಾಮ್‌ಗಳು ಮತ್ತು ಸ್ಪ್ರೆಡ್‌ಗಳು'
           Cooking: 'ಅಡುಗೆ'
@@ -415,6 +423,15 @@ kn:
           Hot_Chocolate: 'ಬಿಸಿ ಚಾಕೊಲೇಟ್'
           oil: 'ಎಣ್ಣೆ'
           Oil: 'ಎಣ್ಣೆ'
+          Flavouring_Syrups: 'ಸುವಾಸನೆಯ ಸಿರಪ್ಗಳು'
+          cooking: 'ಅಡುಗೆ'
+          Milkshakes: 'ಮಿಲ್ಕ್ಶೇಕ್ಗಳು'
+          Curd: 'ಮೊಸರು'
+          Candies_&_Mints: 'ಮಿಠಾಯಿಗಳು ಮತ್ತು ಮಿಂಟ್ಸ್'
+          Chocolate_Bars: 'ಚಾಕೊಲೇಟ್ ತುಂಡುಗಳು'
+          Diabetic_Care: 'ಮಧುಮೇಹ ಆರೈಕೆ'
+          Gut_Health: 'ಗಟ್ ಹೆಲ್ತ್ '
+          Protein_Supplements: 'ಪ್ರೋಟೀನ್ ಪೂರಕಗಳು'
         food_preference:
           Veg: 'ಸಸ್ಯಾಹಾರಿ'
           Non_Veg: 'ಮಾಂಸಾಹಾರಿ'
