[952002] multi language bug fixes

--- a/template-app/config/locales/en.yml
+++ b/template-app/config/locales/en.yml
@@ -440,7 +440,7 @@ en:
           Vegan: 'Vegan'
           Organic: 'Organic'
           Gluten_Free: 'Gluten Free'
-          No_Artificial_Preservative_Or_Color: 'No Artificial Preservative Or Color'
+          No_Artificial_Preservative_Or_Color: 'No artificial colours or preservatives'
           No_Added_Sugar: 'No Added Sugar'
           Jain: 'Jain'
         food_allergies:
